--- a/UrlShortener/Views/Shared/_Layout.cshtml
+++ b/UrlShortener/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - UrlShortener</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/minty/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/darkly/bootstrap.min.css" />
     <!--<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/UrlShortener.styles.css" asp-append-version="true" />
     
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted text-center py-3">
         <div class="container">
-            &copy; 2025 - UrlShortener
+            &copy; 2025 UrlShortener ·  por <a href="https://www.linkedin.com/in/thalesoneduardo" target="_blank">Thaleson</a>
         </div>
     </footer>
 
